2008-08-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dgCMatrix.c (dgCMatrix_LU): partially revert change
	r2175 (2008-04-23) and do give an error for a singular matrix.
	* man/lu.Rd, R/Auxiliaries.R (detSparseLU): adapt to that.

	* R/LU.R: expand( <sparseLU> )

	* NAMESPACE, man/all.equal-methods.Rd:
	* R/Matrix.R (all.equal): methods for Matrices,
	* R/sparseMatrix.R, R/sparseVector.R: sparseMatrices and -Vectors


2008-08-23  Douglas Bates <bates@stat.wisc.edu>

	* [r2243] R/CHMfactor.R, man/CHMfactor-class.Rd: Added expand method and
	  documentation for CHMfactor class
	* [r2241] R/CHMfactor.R: Added trivial coercion method for CHMfactor ->
	  pMatrix

2008-08-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nsCMatrix.R (setAs(., dgTMatrix))): remove unused method

2008-08-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R (.Ops2dge.via.x, and many others): eliminate never-used
	variable assignments {from "next version" codetools}.
	* R/Csparse.R, R/Tsparse.R: ditto

2008-08-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseVector.R (sp2vec, coerce to sparseVector):
	make sure no integer overflows happen, and use double precision
	(n, index) where appropriate.

	* tests/Simple.R: test "large" sparse vectors.

2008-08-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R (sparseVector): 'length' and 'i' are "numeric", not
	just integer (allowing much longer length).

2008-07-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R (diagonalMatrix): extend  "sparseMatrix" instead of
	"denseMatrix".  This renders "scarceMatrix" dispensable and
	invalidates part of MM's presentations on "space of Matrix
	classes", but seems cleaner overall.

	* R/diagMatrix.R, etc: eliminate "scarceMatrix", replacing it by
	"sparseMatrix" in method signatures;
	further, instead of coercing to "sparseMatrix", coerce to
	"TsparseMatrix" now.

2008-07-26  Martin Maechler  <maechler@stat.math.ethz.ch>
